@@ -59,7 +59,7 @@ in use. Since no database is selected in the example shown above,
 the prompt is "no db".
 
 <p>To exit the interpreter, type the end-of-file character
-(Control-Z on Windows, Control-D on POSIX systems) or type "exit();".
+(Control-Z on Windows, Control-D on POSIX systems) or type "os.exit();".
 (Do not forget the parentheses and the semicolon)
 
 <p>For more information about invoking Duro D/T see <a href="../utils.html#durodt">DuroDBMS utilities</a>.
