@@ -12,6 +12,12 @@ DuroDBMS 1.2
   
 - Removed RDB_obj_set_const() and RDB_obj_is_const().
 
+- Added read-only operators abs(), pow(), exp(), ln(), and log().
+
+- Added operator os.chdir().
+
+- Moved exit() operators to package 'os'. 
+
 DuroDBMS 1.1
 
 - Accessing properties is now possible using value.property in addition
